BUGFIX: unecessary white space below footer fixed

--- a/learnify/web/src/components/component_styles.css
+++ b/learnify/web/src/components/component_styles.css
@@ -79,7 +79,6 @@
 
 .footer-parent-layout {
     width: 100%;
-    bottom: 0;
     margin: 0 auto;
     padding: 1.4%;
     background-color: #1746A2;
